--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -57,7 +57,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware false
+set vcs_aware true
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -373,7 +373,7 @@ map @  console -p6 shell  %%s
 map #  console shell -p%space
 map s  console shell%space
 map r  chain draw_possible_programs; console open_with%space
-map f  console find%space
+map f  console scout -ftsea%space
 map cd console cd%space
 
 map <C-p> chain console; eval fm.ui.console.history_move(-1)
@@ -453,6 +453,7 @@ map gu cd /usr
 map gd cd /dev
 map gl cd -r .
 map gL cd -r %f
+map gf cd ~/.config
 map go cd /opt
 map gv cd /var
 map gm cd /media
@@ -477,7 +478,8 @@ map y. yank name_without_extension
 # Filesystem Operations
 map =  chmod
 
-map cw console rename%space
+# map cw console rename%space
+map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.open_console("rename ")
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
@@ -757,3 +759,10 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+
+# default_linemode
+default_linemode devicons2
+
+# fzm
+map <C-g> fzm
